Edit the products

--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -6,3 +6,9 @@ $darkFlat: #2C3A47;
 
 $redColor: #c0392b;
 $redFlatColor: #e74c3c;
+
+$blueColor: #2980b9;
+$blueFlatColor: #3498db;
+
+$greenColor: #27ae60;
+$greenFlatColor: #2ecc71;
