--- a/src/scss/layouts/_global.scss
+++ b/src/scss/layouts/_global.scss
@@ -33,6 +33,22 @@
         }
       }
     }
+
+    .cate {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      padding: 4px 9px;
+      background-color: $redFlatColor;
+      border-bottom: 2px solid $redFlatColor;
+      border-top: none;
+      border-right: none;
+      color: #fff;
+      border-radius: 50%;
+      transform: rotate(-30deg);
+      transition: all 0.5s ease-in-out;
+    }
+
     .details {
       padding-top: 10px;
       padding-bottom: 10px;
@@ -84,6 +100,13 @@
     &:hover {
       .active-icons {
         right: 20px;
+      }
+      .cate {
+        background-color: transparent !important;
+        color: $redFlatColor;
+        border: 2px solid $redFlatColor;
+        border-top: none;
+        border-right: none;
       }
       .details {
         bottom: 0px;
