--- a/src/scss/layouts/_global.scss
+++ b/src/scss/layouts/_global.scss
@@ -1,3 +1,10 @@
+* {
+  box-sizing: border-box;
+  li {
+    list-style: none;
+  }
+}
+
 .v-application {
   background-color: $dark !important;
   color: #fff !important;
@@ -40,7 +47,7 @@
       left: 10px;
       padding: 4px 9px;
       background-color: $redFlatColor;
-      border-bottom: 2px solid $redFlatColor;
+      border: 2px solid $redFlatColor;
       border-top: none;
       border-right: none;
       color: #fff;
