--- a/src/scss/layouts/_navbar.scss
+++ b/src/scss/layouts/_navbar.scss
@@ -4,13 +4,62 @@ nav {
   width: 100%;
 }
 
-.v-btn {
-  transition: all 0.3s ease-in-out;
-  &:hover:not(.v-btn--active) {
-    background-color: rgba($color: $redFlatColor, $alpha: 0.3);
-  }
-  &--active {
-    background-color: $redFlatColor;
+
+.menu {
+  line-height: 64px;
+  .link {
+    display: inline-block;
+    span {
+      width: 100%;
+      height: 100%;
+      display: inline-block;
+      cursor: pointer;
+      transition: all 0.3s ease-in-out;
+      a {
+        padding: 0 20px;
+        width: 100%;
+        height: 100%;
+        text-decoration: none;
+        display: inline-block;
+        color: #fff;
+      }
+      .router-link-exact-active {
+        background-color: $redFlatColor;
+      }
+      &:hover {
+        background-color: rgba($color: $redFlatColor, $alpha: 0.3);
+      }
+    }
+    .v-btn:hover {
+      background: none;
+    }
+    .drop-menu {
+      position: absolute;
+      left: 40px;
+      top: 64px;
+      background-color: $dark;
+      color: #fff;
+      width: 90vw;
+      height: 0;
+      overflow: hidden;
+      box-shadow: 0 2px 10px rgba(#000, 0.2);
+      border-radius: 0 0 5px 5px;
+      transition: all 0.3s ease-in-out;
+      &.active {
+        height: 450px;
+      }
+      .box {
+        .products {
+          margin-top: 10px;
+          padding: 0;
+          font-size: 15px;
+        }
+      }
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
   }
 }
 
