--- a/src/scss/layouts/_navbar.scss
+++ b/src/scss/layouts/_navbar.scss
@@ -59,6 +59,25 @@ nav {
         width: 100%;
         height: 100%;
       }
+
+      .v-card {
+        cursor: pointer;
+        .details {
+          position: static;
+          width: 100%;
+          background-color: $darkFlat;
+          .item-title,
+          .brand,
+          .price {
+            margin: 0;
+            padding: 0;
+          }
+          .price {
+            color: $redColor;
+            font-weight: bold;
+          }
+        }
+      }
     }
   }
 }
